# haar-weather

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  pyproject.toml
config/: haar.example.toml
docs/: haar-project-spec.md
haar/: __init__.py  cli.py  config.py  logging.py
haar/collectors/: __init__.py  base.py  era5.py  metoffice.py  netatmo.py  openmeteo.py
haar/storage/: __init__.py  database.py  models.py
haar/visualisation/: dashboard.py
tests/: __init__.py  test_cli.py  test_collectors.py  test_config.py  test_database.py  test_logging.py  test_package.py
