[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haar"
version = "0.1.0"
description = "Hyperlocal weather prediction system for Scotland"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "lawrab"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    # CLI and UI
    "click>=8.1.0",
    "rich>=13.0.0",

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Data handling
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "xarray>=2023.0.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",

    # Meteorological data
    "cfgrib>=0.9.0",
    "metpy>=1.5.0",

    # HTTP and API
    "requests>=2.31.0",
    "tenacity>=8.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",

    # Geospatial
    "pyproj>=3.6.0",

    # Logging
    "structlog>=23.1.0",

    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.0.292",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

[project.scripts]
haar = "haar.cli:main"

[project.urls]
Homepage = "https://github.com/lawrab/haar-weather"
Repository = "https://github.com/lawrab/haar-weather"
Issues = "https://github.com/lawrab/haar-weather/issues"

[tool.setuptools]
packages = ["haar"]

[tool.setuptools.package-data]
haar = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cfgrib.*",
    "metpy.*",
    "lightgbm.*",
    "matplotlib.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=haar --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["haar"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
